# CommandStrike

./: CONTRIBUTING.md  Cargo.toml  README.md  run_command_strike.sh
command_strike/: .gitignore  CURSOR_RULES.md  README.md
command_strike/src/: lib.rs  llm.rs  main.rs
src/: llm.rs  main.rs
